# STM32F401RE-MicroROS

./: .gitmodules  .mxproject  CMakeLists.txt  Makefile  STM32F401RE-MicroROS.ioc
Core/Src/: freertos.c  main.c  usart.c
cmake/stm32cubemx/: CMakeLists.txt
micro_ros_stm32cubemx_utils/: CMakeLists.txt
